@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.23 2004/01/22 08:30:30 grant Exp $
+# $NetBSD: Makefile,v 1.24 2004/01/28 14:16:41 xtraeme Exp $
 
 DISTNAME=	mule-2.3
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	editors
 MASTER_SITES=	ftp://ftp.m17n.org/pub/mule/
 
@@ -24,7 +24,7 @@ WRKSRC=		${WRKDIR}/mule
 GNU_CONFIGURE=	yes
 USE_BUILDLINK2=	yes
 USE_GNU_TOOLS+=	make
-USE_X11BASE=	yes
+USE_X11=	yes
 
 CONFIGURE_ARGS+=	${MACHINE_ARCH}--netbsd --with-x --with-x-toolkit=lucid
 CONFIGURE_ARGS+=	--terminal-face --mcpath
